--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<form method="post" action="https://kablewy-submissions.heideman.workers.dev/submit/a7822d57-8398-4b5a-866e-67f59a4c8cc4">
-    <input type="hidden" name="api_key" value="0c99d96a0c29a76c6850a2590974bf5377b6293c95814eb914d1e72450911506"/>
+<form method="post" action="https://kablewy-submissions.heideman.workers.dev/submit/a7822d57-8398-4b5a-866e-67f59a4c8cc4?api_key=0c99d96a0c29a76c6850a2590974bf5377b6293c95814eb914d1e72450911506">
     <div class="rendered-form formbuilder-embedded-bootstrap">
         <div class="formbuilder-text form-group field-first-name"><label for="first-name" class="formbuilder-text-label">First Name<span class="formbuilder-required">*</span></label><input type="text" class="form-control" name="first-name" id="first-name" required="required" aria-required="true"></div>
         <div class="formbuilder-text form-group field-last-name"><label for="last-name" class="formbuilder-text-label">Last Name<span class="formbuilder-required">*</span></label><input type="text" class="form-control" name="last-name" id="last-name" required="required" aria-required="true"></div>
